--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,22 @@
 .App {
-  text-align: center;
+  padding: 30px;
+}
+.NavBar {
+  padding-bottom: 30px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.cardButton {
+  width: 100%
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.cardButtonContainer {
+  width: 100%
 }
 
-.App-title {
-  font-size: 1.5em;
+.newProductCard {
+  width: 600px;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.editProductCard {
+  width: 600px;
 }
