--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,13 @@
 .editProductCard {
   width: 600px;
 }
+
+.addView {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.addCityInput {
+
+}
